fixed aligning issues

--- a/src/main/resources/static/css/manager.css
+++ b/src/main/resources/static/css/manager.css
@@ -3,6 +3,10 @@ body {
     background-color: #cfd8dc;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 
 h1,
 h2,
